# hotel-booking-etl-ml-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
airflow/: airflow.cfg  standalone_admin_password.txt
airflow/dags/: inference_pipeline.py  training_pipeline.py
notebooks/: Exploratory_Data_Analysis.ipynb
src/steps/: __init__.py  condition_step.py  config.py  feature_engineering_step.py  inference_step.py  preprocess_step.py  train_step.py
