[project]
name = "hotel-booking-etl-ml-pipeline"
version = "0.1.0"
description = "ETL ML Pipeline for Hotel Booking Cancellation Prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.1.2",
    "numpy==1.26.1",
    "mlflow==2.9.2",
    "matplotlib==3.8.1",
    "scikit-learn==1.3.2",
    "apache-airflow==2.7.3",
    "pyarrow",
    "jupyter",
    "seaborn",
    "joblib",
    "flask-limiter==3.5.0",
    "flask-session==0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy"
]
